--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 
 <head>
-	<title>Example</title>
+	<title>Comming soon</title>
 </head>
 
 <body>
-	<p>This is an example of a simple HTML page with one paragraph.</p>
 </body>
 
 </html>
